--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "serve build -s -n -L -p $PORT"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "serve": "^14.2.1",
